# ChangeLog for dev-python/disqus-python
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  31 Aug 2013; Johann Schmitz <ercpe@gentoo.org> disqus-python-0.4.2.ebuild:
  Dropped py2.6 due to incompatibility

  31 Aug 2013; Johann Schmitz <ercpe@gentoo.org> disqus-python-0.4.2.ebuild:
  Changed SRC_URI to pypi because v0.4.2 isn't available on github anymore.

  28 Aug 2013; Johann Schmitz <ercpe@gentoo.org> disqus-python-0.4.2.ebuild:
  Added tests to disqus-python

  11 Jun 2013; Justin Lecher <jlec@gentoo.org> disqus-python-0.4.2.ebuild,
  metadata.xml:
  Bump to EAPI=5 and new python r1 eclasses