@@ -4,7 +4,7 @@
 
 EAPI=5
 
-PYTHON_COMPAT=( python2_7 )
+PYTHON_COMPAT=( python{2_6,2_7} )
 
 inherit distutils-r1 vcs-snapshot
 
@@ -17,9 +17,11 @@ LICENSE="Apache-2.0"
 KEYWORDS="~amd64 ~x86"
 IUSE="test"
 
-DEPEND="test? (
-	dev-python/mock
-)"
+DEPEND="
+	dev-python/simplejson[${PYTHON_USEDEP}]
+	test? (
+		dev-python/mock[${PYTHON_USEDEP}]
+	)"
 
 S="${WORKDIR}"/${P}
 
