@@ -3,6 +3,9 @@
 # $Header: $
 
   31 Aug 2013; Johann Schmitz <ercpe@gentoo.org> disqus-python-0.4.2.ebuild:
+  Fixed dependecies for disqus-python
+
+  31 Aug 2013; Johann Schmitz <ercpe@gentoo.org> disqus-python-0.4.2.ebuild:
   Dropped py2.6 due to incompatibility
 
   31 Aug 2013; Johann Schmitz <ercpe@gentoo.org> disqus-python-0.4.2.ebuild:
